Added two components
Added detailed and history components for the profile user

managed the onclick in the two buttons

added favicon and the logo
changed the title of the tab

--- a/src/components/Profile/Guest/Profile.css
+++ b/src/components/Profile/Guest/Profile.css
@@ -56,7 +56,7 @@
 }
 
 .PGButtons {
-    background-color: red;
+    /*background-color: red;*/
 }
 .profilePicture img{
     margin: 5rem auto auto;
