--- a/src/components/Profile/Guest/UserDetails/UserDetails.css
+++ b/src/components/Profile/Guest/UserDetails/UserDetails.css
@@ -1,11 +1,38 @@
-body{
-    background-color: #282c34;
+.profile-settings {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
 }
 
-.greetTest{
-    color: red;
-    background-color: black;
-    width: 500px;
-    height: 500px;
-    font-size: larger;
+.profile-details {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.profile-details img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-right: 20px;
+}
+
+.profile-details div {
+    flex: 1;
+}
+
+.profile-details h2 {
+    margin: 0;
+}
+
+@media (max-width: 768px) {
+    .profile-details {
+        flex-direction: column;
+    }
+
+    .profile-details img {
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
 }
