Footer / Recommendation / navbar expansion

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,8 +2,11 @@
     /* background-color:#41b2dfd7; */
     background-color:#4b87b4da;
     color: #fff;
-   
 }
+   .togglerIcon{
+    color: #fff;
+   }
+
 .items{
     font-weight: 500;
     
