--- a/src/components/ContactUs/Contact.module.css
+++ b/src/components/ContactUs/Contact.module.css
@@ -1,22 +1,23 @@
 .contact{
     background-color: #e7eff6;
     margin-top: 40px;
+    height: 100vh;
     background-image: url('../../images/dotted-map.png');
 }
 .contact h3{
     font-size: 80px;
-    font-weight: 900;
+    font-weight: 700;
     color: rgb(230, 230, 230);
     
 }
 .contact h2{
-    font-size: 45px;
-    font-weight: 900;
+    font-size: 40px;
+    font-weight: 700;
     color: #4b86b4;
     
 }
 .contact p{
-    font-size: 18px;
+    font-size: 16px;
     color: rgb(153, 153, 153);
     margin-bottom: 40px;
  }
@@ -24,7 +25,7 @@
     margin: 0 0 30px 0;
 }
 .contInfo h3{
-    font-size: 25px;
+    font-size: 20px;
     line-height: 32px;
     font-family: "Poppins", sans-serif;
     color: #282828;
@@ -34,6 +35,7 @@
     clear: both;
     padding: 15px 0;
     border-bottom: 1px solid #eee;
+    font-size: 11px;
     
 }
 .icon{
@@ -41,11 +43,14 @@
     position: relative;
     display: block;
     float: left;
-    font-size: 30px;
+    font-size: 20px;
     line-height: 40px;
     font-weight: normal;
     margin-right: 20px;
     text-align: center;
+}
+.contactText{
+    font-size: 11px;
 }
 .contactText h4:hover{
     color: #4b86b4
