--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -7,9 +7,13 @@
         height: 100vh;
         color: #f5f5f5
 } */
+body{
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 .butBg{
     text-align: center;
-    /* font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
+    /* font-family:  Verdana, Geneva, Tahoma, sans-serif; */
     color: #fff;
     background-color: rgba(0, 0, 0, 0.575);
     width: 100%;
@@ -22,6 +26,7 @@
 }
 .homeInp{
     width: 100%;
+    border-radius: 50px;
 }
 .urZone{
     font-weight:bold;
@@ -30,18 +35,19 @@
 
 .homebtn{
     background-color: #63ace5;
+    border-radius: 75px;
 }
 .Services{
     margin-top: 50px;
 }
 .Services h3{
     font-size: 80px;
-    font-weight: 900;
+    font-weight: 700;
     color: rgb(230, 230, 230);
     }
     .Services h2{
     font-size: 40px;
-    font-weight: 900;
+    font-weight: 800;
     color: #4b86b4;
     }
     .Services p{
@@ -49,3 +55,4 @@
         color: #999;
         margin-bottom: 30px;
     }
+   
