waiting to be maintained

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,8 +2,8 @@
     position: relative;
         clear: both;
         /* background: #222; */
-        /* padding-top: 60px;
-        padding-bottom: 60px; */
+        /* padding-top: 60px;*/
+        /*padding-bottom: 60px;*/
         background-size: contain;
         color: #b0b0b0;
 }
