--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -8,7 +8,7 @@
         color: #f5f5f5
 } */
 body{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Montserrat', sans-serif!important;
 }
 
 .butBg{
@@ -26,7 +26,7 @@ body{
 }
 .homeInp{
     width: 100%;
-    border-radius: 50px;
+    border-radius: 30px!important;
 }
 .urZone{
     font-weight:bold;
@@ -34,8 +34,13 @@ body{
 }
 
 .homebtn{
-    background-color: #63ace5;
-    border-radius: 75px;
+    background-color: #63ace5!important;
+    border-radius: 50px!important;
+}
+.homebtn:hover{
+    background-color: #4b86b4!important;
+    width: 220px;
+   
 }
 .Services{
     margin-top: 50px;
