Meeting room and every room temp
added the basics for the room waiting book button design, and the rules, fetching with apis to do the actual work

--- a/src/components/ourWorkSpaces/Workspace.module.css
+++ b/src/components/ourWorkSpaces/Workspace.module.css
@@ -13,6 +13,10 @@
     padding-top: 4px;
     padding-bottom: 25px;
 }
+.cardHolder{
+    display:contents;
+    width: auto;
+}
 .cardss{
     border-radius: 25px; 
     padding: 6px;
