--- a/src/components/ourWorkSpaces/Workspace.module.css
+++ b/src/components/ourWorkSpaces/Workspace.module.css
@@ -13,15 +13,11 @@
     padding-top: 4px;
     padding-bottom: 25px;
 }
-.cardHolder{
-    display:contents;
-    width: auto;
-}
-.cardss{
-    border-radius: 25px; 
+.cards{
+    border-radius: 25px!important; 
     padding: 6px;
 }
-.cardss:hover {
+.cards:hover {
     transform: translate3D(0,-1px,0) scale(1.03); /* move up slightly and zoom in */
     box-shadow: 8px 28px 50px rgba(39,44,49,.07), 1px 6px 12px rgba(39,44,49,.04);
     transition: all .4s ease; /* zoom in */
@@ -29,9 +25,6 @@
   }
 .cardImg{
     border-radius: 20px!important;
-}
-.cardImg:hover{
-   background-color: "#f5f5f5"
 }
 .line{
     width: 90%;
@@ -54,9 +47,6 @@
     text-align: center;
 }
 .btnCard{
-    display: flex!important;
-    align-items: center;
-    justify-content: center;
     background-color :#63ace5!important;
     padding-bottom:6px !important;
     width:90% !important;
@@ -67,39 +57,3 @@
 .btnCard:hover{
     background-color: #4b86b4!important;
 }
-
-.bar{
-    clear: both;
-    margin: 6px 6px 6px 6px;
-    padding: 5px 5px 5px 5px; 
-    }
-
-.progressHeading {
-    overflow: hidden;
-    margin-bottom: 5px;
-    }
-
-   .progressTitle {
-    float: left;
-    margin: 0;
-    padding: 0;
-    color: #444;
-    font-weight: 300;
-    }
-     .progressValue {
-    text-align: right;
-    font-weight: 400;
-    }
-    .progress .progBar {
-    float: left;
-    height: 100%;
-    font-size: 13px;
-    line-height: 7px;
-    color: #fff;
-    text-align: center;
-    }
-
-    .progress .progBar{
-   color: #d6242a!important;
-    border-radius: 10px;
-    }
