--- a/src/components/Recommendation/Cards/Cards.module.css
+++ b/src/components/Recommendation/Cards/Cards.module.css
@@ -2,8 +2,9 @@ body{
     background:radial-gradient(#e5e5e5,#ffff,#e5e5e5);
 }
 .card{
-    width: 350px;
+    width: 300px;
     margin-top: 90px;
+    border-radius: 25px!important;
     
 }
 .card:hover{
@@ -29,6 +30,8 @@ body{
 .cardImg{
     transform: scale(1);
     transition:transform 0.5s ease;
+    border-radius: 10px!important;
+
 }
 .cardImg:hover{
     transform: scale(1.8);
