--- a/src/components/Recommendation/Cards/Cards.module.css
+++ b/src/components/Recommendation/Cards/Cards.module.css
@@ -3,7 +3,7 @@ body{
 }
 .card{
     width: 300px;
-    margin-top: 90px;
+    margin-top: 20px;
     border-radius: 25px!important;
     
 }
@@ -35,4 +35,7 @@ body{
 }
 .cardImg:hover{
     transform: scale(1.8);
+}
+.btnWs:hover{
+    width: max-content;
 }
