--- a/src/components/ourWorkSpaces/Workspace.module.css
+++ b/src/components/ourWorkSpaces/Workspace.module.css
@@ -47,13 +47,67 @@
     text-align: center;
 }
 .btnCard{
-    background-color :#63ace5!important;
+    background-color: #4b86b4!important;
     padding-bottom:6px !important;
     width:90% !important;
     border-radius:20px!important;
     transition-duration: 0.2s!important;
     font-weight:600!important;
+    text-decoration: none!important;
 }
 .btnCard:hover{
-    background-color: #4b86b4!important;
+    background-color :#63ace5!important;
 }
+/* .btnCard {
+    position: relative;
+    font-size: 14px;
+    letter-spacing: 3px;
+    height: 3em;
+    padding: 0 3em;
+    border: none;
+    background-color: #c41b54;
+    color: #fff;
+    text-transform: uppercase;
+    overflow: hidden;
+    border-radius: 5px
+   }
+   
+   .btnCard::before {
+    content: '';
+    display: block;
+    position: absolute;
+    z-index: 0;
+    bottom: 0;
+    left: 0;
+    height: 0px;
+    width: 100%;
+    background: rgb(196,27,84);
+    background: linear-gradient(90deg, rgba(196,27,84,1) 20%, rgba(124,7,46,1) 100%);
+    transition: 0.2s;
+   }
+   
+   .btnCard .label {
+    position: relative;
+   }
+   
+   .btnCard .icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 3em;
+    width: 3em;
+    position: absolute;
+    top: 3em;
+    right: 0;
+    opacity: 0;
+    transition: 0.4s;
+   }
+   
+   .btnCard:hover::before {
+    height: 100%;
+   }
+   
+   .btnCard:hover .icon {
+    top: 0;
+    opacity: 1;
+   } */
