--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -9,7 +9,6 @@
 } */
 body{
     font-family: 'Montserrat', sans-serif!important;
-    font-size: 1.5rem;
     font-weight: 600px;
     text-decoration: none;
 }
@@ -67,3 +66,46 @@ body{
     color: #999;
     margin-bottom: 30px;
 }
+/************************/
+
+    .addWS {
+    position: relative;
+    background: #e2e2e2;
+    height: 20%;
+    text-align: center;
+    /* top: 50%; */
+    }
+    /* .btnWork{
+    background-color: royalblue;
+    padding-top: 30px;
+
+    color: #fff;
+    } */
+   
+    .TextBox{
+    line-height: 50px;
+    font-weight: 400;
+    padding-top: 15px;
+    font-size: 32px;
+    font-family: "Poppins", sans-serif;
+    color: #282828;
+    }
+    .addWS a {
+    background-color: #4b86b4;
+    padding-top: 30px;
+    margin-top: 18px;
+    text-decoration: none !important;
+    color: #fff;
+    border-radius: 3px;
+    padding: 18px 30px;
+    line-height: 1;
+    font-weight: 700;
+    border-width: 0;
+    transition: all 0.1s ease-in;
+    cursor: pointer;
+    border: 1px solid transparent;
+    }
+    .addWS a:hover{
+        background-color: #63ace5;
+    }
+    
