--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,4 +1,5 @@
 .navBg{
+  font-size: 15px;
     /* background-color:#41b2dfd7; */
     background-color:#4b87b4da;
     color: #fff;
@@ -29,7 +30,6 @@
   
   /* Dropdown button */
   .dropbtn {
-    font-size: 16px;
     border: none;
     outline: none;
     color: white;
@@ -43,19 +43,22 @@
 
   /* Dropdown content (hidden by default) */
   .dropdownContent {
+    /* width: 5px!important; */
+    border-radius: 10px;
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 160px;
+    min-width: 100px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
   
   /* Links inside the dropdown */
   .dropdownContent a {
+    border-radius: 10px;
     float: none;
     color: black;
-    padding: 12px 16px;
+    padding: 12px 14px;
     text-decoration: none!important;
     display: block;
     text-align: left;
