--- a/src/components/Profile/Owner/ownerPofile.css
+++ b/src/components/Profile/Owner/ownerPofile.css
@@ -1,4 +1,375 @@
-.heelo{
+/* .heelo{
     background-color: #282c34;
     height: 100vh;
+} */
+
+
+
+
+
+.form_main {
+    width: 310px;
+    display: flex;
+     margin-left: 1px;
+     margin-top: 100px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(255, 255, 255);
+    padding: 30px 30px 30px 30px;
+    border-radius: 30px;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.062);
+  }
+ 
+
+  .rightContainer {
+    width: 310px;
+    display: flex;
+     /* margin:auto; */
+      transform: translate(40%, 0%);
+     margin-top: 100px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(255, 255, 255);
+    padding: 30px 30px 30px 30px;
+    border-radius: 30px;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.062);
+  } 
+
+   .filter{
+    background-color: hsla(0, 0%, 0%, 0.676);
+    width: 100%;
+    height: 100%;
+  } 
+   .heading {
+    font-size: 2.5em;
+    color: #2e2e2e;
+    font-weight: 700;
+    margin: 15px 0 30px 0;
+  }
+  .middelText{
+    word-break: keep-all;
+    display: block;
+    text-align: center;
+    font-weight: 600;
+    font-size: 12px;
+    margin: auto;
+  }
+  .inputContainer {
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  } 
+   
+  .inputIcon {
+    position: absolute;
+    left: 10px;
+  } 
+  
+ .inputField {
+    width: 100%;
+    height: 40px;
+    background-color: transparent;
+    border: none;
+    border-bottom: 2px solid rgb(173, 173, 173);
+    border-radius: 30px;
+    margin: 10px 0;
+    color: black;
+    font-size: .8em;
+    font-weight: 500;
+    box-sizing: border-box;
+    padding-left: 30px;
+  } 
+  
+   .inputField:focus {
+    outline: none; 
+    /* border-bottom: 2px solid rgb(199, 114, 255); */
+     border-bottom: 2px solid royalblue;
+
+  }
+   
+  .inputField::placeholder {
+    color: rgb(80, 80, 80);
+    font-size: 1em;
+    font-weight: 500;
+  }
+  
+  #button {
+    position: relative;
+    width: 100%;
+    border: 2px solid royalblue;
+    background-color: royalblue;
+    border: 2px solid #63ace5;
+    background-color: #63ace5; 
+     height: 40px;
+    color: white;
+    font-size: .8em;
+    font-weight: 500;
+    letter-spacing: 1px;
+    border-radius: 30px;
+    margin: 10px;
+    cursor: pointer;
+    overflow: hidden;
+  }
+  
+  #button::after {
+    content: "";
+    position: absolute;
+    background-color: rgba(255, 255, 255, 0.253);
+    height: 100%;
+    width: 150px;
+    top: 0;
+    left: -200px;
+    border-bottom-right-radius: 100px;
+    border-top-left-radius: 100px;
+    filter: blur(10px);
+    transition-duration: .5s;
+  }
+  
+  #button:hover::after {
+    transform: translateX(600px);
+    transition-duration: .5s;
+  }
+  
+  .signupContainer {
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 9px;
+  }
+  
+  .signupContainer p {
+    font-size: .9em;
+    font-weight: 500;
+    color: black;
+  }
+  
+  .signupContainer a {
+    font-size: .7em;
+    font-weight: 500;
+    background-color: #2e2e2e;
+    color: white;
+    text-decoration: none;
+    padding: 8px 15px;
+    border-radius: 20px;
+  }
+  .Forget-password{
+    text-decoration: none;
+    color: #000;
+  }
+  .Forget-password:hover{
+    font-weight: bold;
+  }
+  .btnSignUp:hover{
+    background-color:  #000;
+  } 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*-----------------*/
+/* body{ */
+    /*background-image: url("../../../images/hero-image-01.jpg");*/
+
+/* } */
+/*#A{*/
+/*    text-decoration: none;*/
+/*    color: white;*/
+/*}*/
+/* .bigDiv {
+    justify-content: center;
+    display: flex; */
+    /*background-repeat: no-repeat;*/
+/* } */
+
+
+.reggBox {
+    margin-top: 20vh; 
+
+    /*padding: 10vh;*/
+    width: 100%;
+
+    background-color: rgba(60, 65, 69, 0.3); 
+    /*height: 200px;*/
+    /*display: flex;*/
+     justify-content: center;
+    align-items: center;
+    position: relative; 
+    /*border: 3px solid green;*/
+    border-radius: 9%;
+    padding: 35px;
+    margin-left: 11vh;
+}
+
+.checkbox-container {
+    display: flex;
+    justify-content: center;
+}
+body { 
+    /*background-image: url("../../../../assets/regBackground.jpg");*/
+     background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.signinButton{
+    background-color: #0DCAF0;
+    width: 15vh;
+    height: 5vh;
+    border-radius: 30px;
+    border-color: #0DCAF0;
+}
+
+.lgHead{
+    text-align: center; 
+ }
+
+
+
+body{
+    height: 100vh;
+}
+.bigContainer{
+    display: flex;
+    /* margin-top: 4.2rem; */
+    background-color: #fff; /* fallback color */
+  background-image: url('../../../images/hero-image-01.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; 
+     
+
+}
+
+
+.alerts{
+    position: absolute;
+    margin:  auto;
+    display: none;
+    margin: auto;
+    height: 100%;
+    width: 100%;
+    /*justify-content: center;*/
+    text-align: center;
+}
+
+.alertBox{
+    vertical-align: center;
+    background-color: white;
+    border-radius: 5%;
+    width: 20%;
+    margin: auto;
+    padding: 2rem 0;
+}
+.alertButtons{
+    justify-content: space-around;
+    display: flex;
+}
+.leftContainer{
+
+    /* background-color: #61dafb;     */
+    height: 30%;
+    margin-top: 90px;
+    margin-bottom: 400px;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    transform: translate(30%, 5%);
+    /* background-color: rgba(255,255,255, 0.5); */
+    background-color: #fff;
+
+}
+
+.middleContainer{
+    /* background-color: rgba(255,255,255, 0.5);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    height: 30%; */
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    transform: translate(50%, -15%);
+    /* margin-top: 70px; */
+    
+}
+
+/* .PGbuttons{ */
+    /*display: block;*/
+    /*margin: 0px 10px 1rem 10px;*/
+    /*width: 100%;*/
+
+/* } */
+.PGButtonHolder{
+    text-align: center;
+    margin: 0 2rem;
+    margin-top: 50px;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    
+
+
+}
+
+   
+
+    
+
+
+
+/* .rightContainer{
+    background-color: white;
+    border-left: 2px solid rgb(215, 220, 221);
+     height:auto;
+     font-family: "Times New Roman", Times, serif;
+     width: 4px;
+
+} */
+
+/* .upcoming{
+    margin:10px auto; 
+} */
+
+.PGButtons { 
+    background-color: white;
+    
+    border-radius: 100%;
+
+ }
+/* .profilePicture img{
+    margin: 5rem auto auto; */
+    /*padding-top: 3rem;*/
+/* } */
+
+.userTabs{
+    justify-content: center;
+    display: grid;
+}
+/* .profilePicture img{ */
+    /*background-image: url("./UserProfile-Male-PNG.png");*/
+
+    /* flex: 1;
+    width: 70%;
+    resizeMode: 'contain' */
+    /*width: 20%;*/
+/* } */
+.PGData{
+    text-align: center;
+}
+
+.contactButton{
+    margin-bottom: 3rem;
 }
