--- a/src/components/Recommendation/Filter/Filter.module.css
+++ b/src/components/Recommendation/Filter/Filter.module.css
@@ -1,7 +1,10 @@
 .head{
     width: 100%;
     height: 100%;
-    background-color: 	#0a75ad;
+    box-shadow: inset;
+    /* background-color:	#366897; */
+        background-color:	#4b86b4;
+
     color: aliceblue;
     font-size: 12px;
 }
@@ -10,5 +13,5 @@
     margin-top: 65px;
 }
 .stars{
-    color: #f5b917;
+    color: #e9ad07;
 }
