--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,4 +1,3 @@
-
 body{
     background-color: #e7eff6;
 }
@@ -21,4 +20,10 @@ color:  #4b86b4;
 font-size: 18px;
 color: rgb(82, 82, 82);
 margin-bottom: 50px;
+}
+
+.homeUsInfo{
+    margin: 20px;
+    font-family: "Courier New", Courier, monospace;
+    font-size: x-large;
 }
