--- a/src/components/Recommendation/Filter/Filter.module.css
+++ b/src/components/Recommendation/Filter/Filter.module.css
@@ -1,16 +1,28 @@
 .head{
-    width: 100%;
-    height: 100%;
-    box-shadow: inset;
+    /* width: 100%;
+    height: 100%; */
+    /* box-shadow: inset; */
     /* background-color:	#366897; */
-        background-color:	#4b86b4;
-
+        /* background-color:	#4b86b4; */
     color: aliceblue;
-    font-size: 12px;
+    font-size: 11px;
+    box-shadow: inset; 
+    height: 89%; /* Full-height: remove this if you want "auto" height */
+    width: 200px; /* Set the width of the sidebar */
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1; /* Stay on top */
+    bottom: 0; /* Stay at the top */
+    left: 0;
+    background-color: #4b87b4da; /* Black */
+    overflow-x: hidden; /* Disable horizontal scroll */
+    
+}
+.filterr{
+    font-size: 30px;
 }
 .filterBody{
-    padding: 20px;
-    margin-top: 65px;
+    padding: 10px;
+
 }
 .stars{
     color: #e9ad07;
