show / hide navbar

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -62,6 +62,7 @@
     text-decoration: none!important;
     display: block;
     text-align: left;
+    font-size: 12px;
   }
   
   /* Add a grey background color to dropdown links on hover */
