--- a/src/components/Booking/Payment.module.css
+++ b/src/components/Booking/Payment.module.css
@@ -6,7 +6,7 @@
     border-radius: 26px;
     max-width: 450px;
     margin: auto;
-    margin-top:100px ;
+    margin-top:200px ;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -66,7 +66,11 @@
     font-size: 11px;
     margin: auto;
   }
-  
+  .filterLogin{
+    background-color: hsla(42,77,105, 0.676);
+    width: 100%;
+    height: 100%;
+  }
   .line {
     display: inline-block;
     width: 100%;
