--- a/src/components/Recommendation/Filter/Filter.module.css
+++ b/src/components/Recommendation/Filter/Filter.module.css
@@ -7,9 +7,9 @@
     color: aliceblue;
     font-size: 11px;
     box-shadow: inset; 
-    height: 89%; /* Full-height: remove this if you want "auto" height */
+    height: 100%; /* Full-height: remove this if you want "auto" height */
     width: 200px; /* Set the width of the sidebar */
-    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    /* position: fixed; Fixed Sidebar (stay in place on scroll) */
     z-index: 1; /* Stay on top */
     bottom: 0; /* Stay at the top */
     left: 0;
@@ -21,6 +21,7 @@
     font-size: 30px;
 }
 .filterBody{
+    margin-top: "50px";
     padding: 10px;
 
 }
